# src/main/java/com/VLmb/ai_tutor_backend/feature/quiz/api/dto/QuizQuestionResponse.java
@@ -1,13 +1,10 @@
 package com.VLmb.ai_tutor_backend.feature.quiz.api.dto;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-
 import java.util.List;
 
 public record QuizQuestionResponse(
+        Long id,
         String question,
-        List<String> variants,
-        @JsonProperty("gold_answer")
-        String goldAnswer
+        List<String> variants
 ) {
 }
